--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "homepage": "https://github.com/JinGoon-Kim/Clone_youtube#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.0.2",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
